--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=8000
 DB_CONNECTION_STRING=mongodb+srv://root:root@taskdbativychallenge.rckqe5z.mongodb.net/test
+JWT_SECRET=ativychallengeeduardo102030
