--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8000
-MONGODB_URI='mongodb+srv://root:root@taskdbativychallenge.rckqe5z.mongodb.net/test'
+MONGODB_URI=mongodb+srv://root:root@taskdbativychallenge.rckqe5z.mongodb.net/test
 JWT_SECRET=ativychallengeeduardo102030
